scomparsa numeri ok

--- a/index.html
+++ b/index.html
@@ -19,23 +19,7 @@
                 Al click su vai appariranno 5 numeri,avrai solo 5 secondi per memorizzarli.
             </h4>
         </div>
-        <div id="gioco">
-            <div class="card">
-                55
-            </div>
-            <div class="card">
-                100
-            </div>
-            <div class="card">
-                5
-            </div>
-            <div class="card">
-                5
-            </div>
-            <div class="card">
-                5
-            </div>
-
+        <div id="gioco" class="flex">
         </div>
 
     </main>
