--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
         </div>
         <div id="gioco" class="flex">
         </div>
+        <div id="risposte" class="none">
+            <div class="inputtini">
+                <input name="risposta1" type="text" placeholder="che numero ricordi?">
+                <input name="risposta2" type="text" placeholder="che numero ricordi?">
+                <input name="risposta3" type="text" placeholder="che numero ricordi?">
+                <input name="risposta4" type="text" placeholder="che numero ricordi?">
+                <input name="risposta5" type="text" placeholder="che numero ricordi?">
+            </div>
+            <div class="bottoncino">
+                <button id="vaiRisposte">vai!</button>
+            </div>
+            
+        </div>
 
     </main>
     <footer>
